     The OVS tree remains hosted on GitHub.
     https://github.com/openvswitch/ovs.git
   - DPDK:
     * OVS validated with DPDK 23.11.1.
     * Link status changes are now handled via interrupt mode if the DPDK
       driver supports it.  It is possible to revert to polling mode by setting
       per interface 'options:dpdk-lsc-interrupt' to 'false'.
   - Python:
     * Added custom transaction support to the Idl via add_op().
     * Added support for different output formats like 'json' to Python's
       unixctl classes.
   - Tunnels:
     * Previously the kernel datapath did not enable UDP checksums by default
       in IPv6 tunnels.  This behaviour is non-standard, differs from the
       Linux kernel, and as also different than the userspace datapath.  Now
       these tunnels will calculate checksums by default and that behaviour can
       be changed with "options:csum=false" just as with the userspace
       datapath.
   - Local sampling is introduced.  It reuses the OpenFlow sample action and
     allows samples to be emitted locally (instead of via IPFIX) in a
     datapath-specific manner.  The Linux kernel datapath is the first to
     support this feature by using the new datapath 'psample' action.  See
     'local-group-id' column in the Flow_Sample_Collector_Set table.
   - A new configuration knob 'other-config:explicit-sampled-drops' in the
     Open_vSwitch table controls whether an explicit drop action shall be
     added at the end of datapath flows whose last action is an
     observability-driven sample action.
   - OpenFlow:
     * A new version of the 'sample' action (NXAST_SAMPLE4) is introduced
       that allows use of subfields in 'obs_point_id' and 'obs_domain_id'.


v3.3.0 - 16 Feb 2024
--------------------
   - OVSDB:
     * Support pre-vote mechanism in RAFT that protects the cluster against
       disruptive servers (section 9.6 of the original RAFT paper).  Upgrading